Added to report

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -11,10 +11,10 @@
 \usepackage{amsmath}
 
 % Please include a clear, concise, and descriptive title
-\title{COMP230 - CPD Report}
+\title{COMP330 - CPD Report}
 
 % Please do not change the subtitle
-\subtitle{COMP230 - CPD Report}
+\subtitle{COMP330 - CPD Report}
 
 % Please put your student number in the author field
 \author{1606119}
@@ -24,26 +24,28 @@
 \maketitle
 
 \section{Introduction}
-Many of the problems that I brought up in my reports last year have been resolved thanks to the plans that I constructed, however thanks to the wider variety of tasks and assignments that were given this study block, new challenges have appeared during this term that I have to plan how to overcome if I want to be a valuable team member and successful in my wanted career path, which has not changed since last year (Physics Programmer). A lot of the skills outlined in this report, much like last year, showed up during production time of the COMP230 BA game, however some are more general skills that I need to learn to be able to nail down in order to work effectively on solo projects, as well as in a group setting, as I feel both of these are applicable in the modern games industry. 
+Thanks to the plans that I outlined in my report last year, most of the problems that I brought up have been rectified, however, once again thanks to the sheer variety of the modules and tasks that are being run this study block, there have been a number of new challenges that have presented themselves to me that I need to create plans for, so that I can overcome these issues. If I do not, it may affect my future ability to be a good team member, and put my hopes of getting a job in my chosen field (Physics Programmer) in jeopardy. Much like last year, most of these came up from the the COMP330 game project, however there were a few skills that came up from the other modules which are more focused on my ability to work more effectively of solo projects, as I feel these are also important skills to have in the games industry. 
+
+\section{Ability to maintain drive throughout a project}
+The first skill that came to my attention was my lack of ability to maintain drive throughout the duration of a project. This skill only came to my attention due to the increase in difficulty of the modules this study block, as I found myself getting to the harder parts of assignments, and then moving on to another piece of work much more often than in previous study blocks. This root cause of this issue was mainly caused by me dropping behind on other projects, but this will be covered in one of the other sections, however it was also caused by my lack of ability to keep in a positive mind set about my work, which I need to address if I want to succeed in the games industry as keeping positive about a project is extremely important as if you lack drive during a professional project, it could cost you your job. To overcome this issue, I will make sure to utilise my other skills to ensure that my mindset remains positive so that I can work on my projects consistently and they meet the level of quality that I want them to meet, as otherwise my work will continue to be off a lesser quality that what I can actually achieve. 
+
+\section{Better communication with other routes}
+The second skill that I need to work on is my communication with fellow programmers on different routes, although I brought up this issue in my previous report I still haven't really overcome this issue due to the change of teams. The issue last year was more about the lack of communication I had with my team about the work getting done without me knowing it had been completed, however this year it was more about the work that had already been completed, in the way that I didn't understand how the already implemented features and systems operated. And my lack of communication with the other team members ended up wasting me a lot of time working out how their code worked, rather than asking them directly. In a professional games development setting, this skill would be very important, as without seamless communication between the different development fields, a lot of development time could be wasted due to miscommunication of task assignment for example. To counteract this issue in the future, I'll make sure to ask other members to clarify any work they have done before I start work on  anything relating to it, so know exactly how it all works, that way I can instantly start work, and not waste time having to work out the functionality as I go along. 
 
 
-\section{Time Management for Programming Assessments}
-The first skill that came to my attention was my lack of time management when it comes to programming work, upon reflection the plans that I made in my previous reports were too easily ignored and I consistently failed to follow them effectively and thus in this study block, I still fell behind on my work schedule and was working on projects right up to the hand-in date, which hindered my ability to create a final product up to the standard where the code is the level of quality that I wanted, such as having to not implement features that could get me a higher mark as I've not left myself enough time. However this was mostly self inflicted as I forgot to follow the work plan or simply put off the work, which I really should have learnt not to do by now as in a professional context this could cost me my job if I wasn't turning in work on time, or work that was not up to standard. To overcome this issue, I will undertake ``Timed'' work sessions everyday, where I work solid for a set period of time and then take a break, which is a method one of my lecturers informed me of, which I think will definitely be more achievable way of working as the work is more spread out and will seem less daunting, making myself much less likely to avoid doing or forgetting to do it. 
+\section{Time Management on Written Assements}
+The third skill that came to my attention was my lack of ability to manage time on my written assignments. Whereas in my previous reports, I've found myself leaving little time for programming assignments, this study block I've found the opposite. The methods that I used to improve my time management last year worked well for programming tasks, but impacted heavily on my written work, such as my dissertation draft, and as such, most of the time, large portions of my written work have been done after major programming task deadlines. In a professional context, leaving written tasks to the last minute could reduce the quality of such thing such as evaluations and development diaries, which could lead to problems with any potential employers. To work on this issue in future, I will make sure to delegate an equal amount of time to written work as I do programming assignments, especially as this year written work have a lot more weight in marking in comparison to previous years, so it is of the highest importance that I can manage my time equally between different assignments. 
 
-\section{Motivation to start a project}
-The second skill that came up during the last study block was my lack of motivation at the start of a project, especially when it came to code heavy subjects such as COMP220, this I found was mostly due to my lack of knowledge about the language that we were going to be using, which in reflection I should have practised more over the summer break, which would have made the tasks much easier to understand and complete. The importance of this skill in the games development field is quite important in my opinion as a lack of motivation at the start of a project can definitely have an impact of the amount of work that I complete during the early sprints, which could also have an effect on my teams progress as my contribution might be integral to theirs getting completed, so it is definitely a skill that I nail quickly as if I continue to have this problem, the quality of my work will continue to suffer as I postpone work until it is no longer feasible, which definitely impacts the polish and amount of content in my final pieces. To overcome this issue, I will need to make better use of the facilities that I have at my disposal such as Pluralsite that can help me build up my knowledge that I require, and focus on getting the project that needs starting and working it to a point where the foundations are complete, as I have found that in the past, once a project is past this point I am much more motivated to continue work on it.
+\section{Prior knowledge of programming languages before attempting projects}
+The fourth skill that came to my attention was the the lack of effort I put into learning programming languages before undertaking assignments and projects, for example, with the 6502 assignment, I found that most of the problems that I was having could be easily solved with a basic knowledge of the programming language. This made for a lot of wasted time while looking for anwsers, whereas it could be spent on development. In a professional context, lack of knowledge of a programming language could lead to work not getting done on time, which could have a big impact on the overall project progress, so it is important that I get this skill mastered before the end of the year to ensure I am well equiped for any future employement. To counteract this issue in the future, I'll make sure to take prior steps to learn the basics of any languages or frameworks I will be using for assignments or projects beforehand so that I can work effectively, and not waste any development time to trying to solve basic problems. 
 
-\section{Attend Regular Code Review Sessions}
-The third skill that came to my attention is that I hardly go over my code with another party, which this study block has lead to some criticism from lecturers and team mates about certain aspects of my code, such as inconsistencies in my commenting, with this normally happening during set code review sessions that are near deadlines, leaving me little time to correct issues as I normally have to work to correct bigger issues, so I often struggle to meet the requirements for grades that I want to that relate to code quality. In a professional context I feel that this issue could lead to my code becoming hard for other programmers to understand, and thus harder to work with, which could definitely impact on the workflow of a project if I am always having to explain what my code is doing, due to issues that I haven't addressed. To address this issue I will hold more regular code review sessions, not just with my team mates but also with my lecturers as I feel having a more regular look at my code will allow me to gain a better understanding of where my common issues lie during the development process, and allow me more time to correct them so that I can obtain a higher grade in my assignments. 
 
-\section{Knowledge and use of Unity}
- The fourth skill that came to up a lot during the last study block was my lack of knowledge when it came to tools that we were using for BA project, namely Unity and SVN, as this was the first time I've used Unity since college, I had forgotten a lot of the basics and thus struggled to work quickly enough to meet a lot of my targets during the development cycle, although I could have learnt these skills before hand, the choice of engine was undecided so I felt it better to build upon my Unreal skills instead as I use it more often. In a professional context I feel that having a limited knowledge of such a widely used engine would definitely hamper my ability to gain a job in a larger games company as having knowledge of more than 1 engine means I can work on a wider variety of projects. To address this issue, I will follow tutorials for Unity that are relevant to the project that I am working on such as for character movements and physics based interactions as this will allow me to work on a wider variety of mechanics within the project and make a larger overall contribution. 
 
 \section{Better Communication with fellow Programmers}
-The fifth skill that came to my attention was that I lack good communication with my fellow programmers, especially if I haven't worked with them before. This lack of skill normally resulted in me not understanding their work pattern and having a hard time keeping track of the progress they were making, which in a professional context really isn't good as I put off working on tasks until I know others have completed it, and without communicating with other programmers, I find that I find out long after it is complete and thus lose out on valuable development time , which could impact on the quality of the final product. To address this issue, I will make better use of the Slack channels in place so that I can communicate more often, and also check on the Trello board before I start work to see if anything has been updated so that I can lay out work that I can achieve. 
+
 
 \section{Conclusion}
-To conclude, the plans I have made in this report will hopefully make me a much more valuable asset to my development teams, and hopefully make me more employable in my future career as they cover a wide variety of areas that can make me a more effective and faster programmer.
+
 
 
 
