--- a/Report/report.tex
+++ b/Report/report.tex
@@ -40,12 +40,11 @@ The third skill that came to my attention was my lack of ability to manage time 
 The fourth skill that came to my attention was the the lack of effort I put into learning programming languages before undertaking assignments and projects, for example, with the 6502 assignment, I found that most of the problems that I was having could be easily solved with a basic knowledge of the programming language. This made for a lot of wasted time while looking for anwsers, whereas it could be spent on development. In a professional context, lack of knowledge of a programming language could lead to work not getting done on time, which could have a big impact on the overall project progress, so it is important that I get this skill mastered before the end of the year to ensure I am well equiped for any future employement. To counteract this issue in the future, I'll make sure to take prior steps to learn the basics of any languages or frameworks I will be using for assignments or projects beforehand so that I can work effectively, and not waste any development time to trying to solve basic problems. 
 
 
-
-\section{Better Communication with fellow Programmers}
-
+\section{Holding reviews of my work more reguarly}
+The fifth skill that I need to work on is reviewing my work much more regularly with my supervisors, module leaders, as well as my team mates. This study block I found that with the majority of the time, I was working at the last minute to tidy up loose ends on my work, with things such as adding comments and tidiyng up things that have been pointed out to me. This lead to a lot of wasted time towards the end of projects which in reality could have been spent on further developing my projects or adding more features. In a professional context, this skill will also assist me in creating more valuable work as I'll be able to see if I have any repeat issues with my work, and I'll be able to fix these in the my future work. To counteract this issue in the future, I'll make sure to hold more regular reviews, much earlier in the project with my work with my supervisor and team mates to ensure that all of the small details and loose ends are tied up before the end of the project so that I can ensure I can spend the time at the end of the project working on the actual project, and increasing my chances of getting a better grade.
 
 \section{Conclusion}
-
+To conclude, I hope that the plans that I have made in this report will help me to become a more valuable team member, and make working on my modules much easier, and they'll hopefuly help me become much more valuable to future employeers as they cover a number of different areas that need to be covered. 
 
 
 
