--- a/Report/report.tex
+++ b/Report/report.tex
@@ -33,18 +33,18 @@ The first skill that came to my attention was my lack of ability to maintain dri
 The second skill that I need to work on is my communication with fellow programmers on different routes, although I brought up this issue in my previous report I still haven't really overcome this issue due to the change of teams. The issue last year was more about the lack of communication I had with my team about the work getting done without me knowing it had been completed, however this year it was more about the work that had already been completed, in the way that I didn't understand how the already implemented features and systems operated. And my lack of communication with the other team members ended up wasting me a lot of time working out how their code worked, rather than asking them directly. In a professional games development setting, this skill would be very important, as without seamless communication between the different development fields, a lot of development time could be wasted due to miscommunication of task assignment for example. To counteract this issue in the future, I'll make sure to ask other members to clarify any work they have done before I start work on  anything relating to it, so know exactly how it all works, that way I can instantly start work, and not waste time having to work out the functionality as I go along. 
 
 
-\section{Time Management on Written Assements}
+\section{Time Management on Written Assessments}
 The third skill that came to my attention was my lack of ability to manage time on my written assignments. Whereas in my previous reports, I've found myself leaving little time for programming assignments, this study block I've found the opposite. The methods that I used to improve my time management last year worked well for programming tasks, but impacted heavily on my written work, such as my dissertation draft, and as such, most of the time, large portions of my written work have been done after major programming task deadlines. In a professional context, leaving written tasks to the last minute could reduce the quality of such thing such as evaluations and development diaries, which could lead to problems with any potential employers. To work on this issue in future, I will make sure to delegate an equal amount of time to written work as I do programming assignments, especially as this year written work have a lot more weight in marking in comparison to previous years, so it is of the highest importance that I can manage my time equally between different assignments. 
 
 \section{Prior knowledge of programming languages before attempting projects}
-The fourth skill that came to my attention was the the lack of effort I put into learning programming languages before undertaking assignments and projects, for example, with the 6502 assignment, I found that most of the problems that I was having could be easily solved with a basic knowledge of the programming language. This made for a lot of wasted time while looking for anwsers, whereas it could be spent on development. In a professional context, lack of knowledge of a programming language could lead to work not getting done on time, which could have a big impact on the overall project progress, so it is important that I get this skill mastered before the end of the year to ensure I am well equiped for any future employement. To counteract this issue in the future, I'll make sure to take prior steps to learn the basics of any languages or frameworks I will be using for assignments or projects beforehand so that I can work effectively, and not waste any development time to trying to solve basic problems. 
+The fourth skill that came to my attention was the the lack of effort I put into learning programming languages before undertaking assignments and projects, for example, with the 6502 assignment, I found that most of the problems that I was having could be easily solved with a basic knowledge of the programming language. This made for a lot of wasted time while looking for answers, whereas it could be spent on development. In a professional context, lack of knowledge of a programming language could lead to work not getting done on time, which could have a big impact on the overall project progress, so it is important that I get this skill mastered before the end of the year to ensure I am well equipped for any future employment. To counteract this issue in the future, I'll make sure to take prior steps to learn the basics of any languages or frameworks I will be using for assignments or projects beforehand so that I can work effectively, and not waste any development time to trying to solve basic problems. 
 
 
-\section{Holding reviews of my work more reguarly}
-The fifth skill that I need to work on is reviewing my work much more regularly with my supervisors, module leaders, as well as my team mates. This study block I found that with the majority of the time, I was working at the last minute to tidy up loose ends on my work, with things such as adding comments and tidiyng up things that have been pointed out to me. This lead to a lot of wasted time towards the end of projects which in reality could have been spent on further developing my projects or adding more features. In a professional context, this skill will also assist me in creating more valuable work as I'll be able to see if I have any repeat issues with my work, and I'll be able to fix these in the my future work. To counteract this issue in the future, I'll make sure to hold more regular reviews, much earlier in the project with my work with my supervisor and team mates to ensure that all of the small details and loose ends are tied up before the end of the project so that I can ensure I can spend the time at the end of the project working on the actual project, and increasing my chances of getting a better grade.
+\section{Holding reviews of my work more regularly}
+The fifth skill that I need to work on is reviewing my work much more regularly with my supervisors, module leaders, as well as my team mates. This study block I found that with the majority of the time, I was working at the last minute to tidy up loose ends on my work, with things such as adding comments and tidying up things that have been pointed out to me. This lead to a lot of wasted time towards the end of projects which in reality could have been spent on further developing my projects or adding more features. In a professional context, this skill will also assist me in creating more valuable work as I'll be able to see if I have any repeat issues with my work, and I'll be able to fix these in the my future work. To counteract this issue in the future, I'll make sure to hold more regular reviews, much earlier in the project with my work with my supervisor and team mates to ensure that all of the small details and loose ends are tied up before the end of the project so that I can ensure I can spend the time at the end of the project working on the actual project, and increasing my chances of getting a better grade.
 
 \section{Conclusion}
-To conclude, I hope that the plans that I have made in this report will help me to become a more valuable team member, and make working on my modules much easier, and they'll hopefuly help me become much more valuable to future employeers as they cover a number of different areas that need to be covered. 
+To conclude, I hope that the plans that I have made in this report will help me to become a more valuable team member, and make working on my modules much easier, and they'll hopefully help me become much more valuable to future employees as they cover a number of different areas that need to be covered. 
 
 
 
